# pyneuphonic

./: .gitignore  README.md  pyproject.toml
.github/: macos.yml
.github/workflows/: linux.yml  macos.yml  netlify-docs.yml  publish.yml  pull_requests.yml  tests.yml  unit_tests.yml  windows.yml
docs/source/: api-reference.md  conf.py  index.md  websocket-api.md
docs/source/python-sdk/: api-reference.rst  quickstart.md  sdk-reference.rst
examples/agents/: agent_with_mcp_server.py  multilingual_agent.py  simple_agent.py  wikipedia_chatbot.py
examples/livekit/: .env.example  README.md  quickstart_agent.py  requirements.txt  web_search_agent.py
examples/sse/: save_audio.py  simple_tts.py
examples/twilio/: .env.example  Dockerfile  README.md  app.py  make_outbound_call.py  requirements.txt
examples/websocket/: save_audio.py  simple_tts.py  speech_to_speech.py
livekit-tests/: README.md  agent.py  env.example  requirements.txt  test_agent_cli.py  unit_test.py
pyneuphonic/: __init__.py  _agents.py  _clone_voices.py  _endpoint.py  _longform_inference.py  _restore.py  _sse.py  _utils.py  _voices.py  _websocket.py  agents.py  client.py  models.py  player.py  tts_streamer.py  tts_streaming.py  utils.py
pyneuphonic/examples/: __init__.py  llama3_interactive.py  speak.py
pyneuphonic/snippets/: __init__.py  speak.py
pyneuphonic/websocket/: __init__.py  neuphonic_socket_manager.py  neuphonic_websocket_client.py  utils.py  websocket_client.py
pyneuphonic/websocket/common/: __init__.py  message_senders.py  pyaudio.py  sounddevice.py
pyneuphonic/websocket/defaults/: pyaudio.py
pyneuphonic/websocket/libs/: __init__.py  byte_array.py  message_senders.py  utils.py
snippets/: basic_usage.py  echo.py  forwarding_audio.py  llama3_interactive.py  playing_audio.py  playing_audio_speed.py  save_audio.py  simple_tts.py
snippets/agents/: simple_agent.py  wikipedia_chatbot.py
snippets/callback/: playing_audio_explicit.py
snippets/class/: playing_audio_explicit.py  save_audio.py  timeout.py
snippets/deprecated/: llama3_interactive.py  simple_tts.py
snippets/deprecated/callback/: playing_audio_explicit.py
snippets/deprecated/class/: basic_usage.py  forwarding_audio.py  playing_audio_explicit.py  timeout.py
snippets/functional/: playing_audio.py
snippets/sse/: save_audio.py  simple_tts.py
snippets/websocket/: save_audio.py  simple_tts.py  speech_to_speech.py
tests/: conftest.py  llama3_interactive.py  speak.py  test_e2e.py  test_neuphonic_websocket_client.py  test_unit.py
tests/websocket/: test_neuphonic_websocket_client.py
tests/websocket/common/: test_message_senders.py
(+19 files in other folders)
