# POETRY CONFIG
[tool.poetry]
name = "pyneuphonic"
version = "0.1.0"
description = "A python SDK for the Neuphonic TTS product."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nest-asyncio = "1.6.0"
pyaudio = "^0.2.14"
websockets = "^12.0"
certifi = "^2024.0.0"
aioconsole = "^0.7.1"
sounddevice = "^0.4.7"
numpy = ">=1.18.0,<3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ollama = "0.2.1"
ruff = "^0.5.0"
pre-commit = "^3.7.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# RUFF FORMATTING AND LINTING CONFIG
[tool.ruff]
# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Skip unused variable rules (`F841`).
ignore = ["F841"]

# Enable Pyflakes (`F`), a subset of the pycodestyle (`E`) codes, pycodestyle warnings (`W`)
# and McCabe complexity (`C901`). This will mimic the default flake8 configuration for linting.
select = ["E4", "E7", "E9", "F", "W", "C901"]

# Ignore unused-imports and wildcard * imports in __init__.py and __main__.py files.
extend-per-file-ignores = { "**/__init__.py" = ["F401", "F403"], "**/__main__.py" = ["F401", "F403"] }

[tool.ruff.format]
# Override the default setting, which is "double".
quote-style = "single"
